MDL-77315 core_courseformat: Attempt to fix the side block
* Remove the scrollbar for the side block

--- a/theme/boost/scss/moodle/drawer.scss
+++ b/theme/boost/scss/moodle/drawer.scss
@@ -224,6 +224,14 @@ $right-drawer-width: 320px;
     @include drawertypes();
 }
 
+#theme_boost-drawers-blocks .drawercontent {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    &::-webkit-scrollbar {
+        display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+    }
+}
+
 @include media-breakpoint-up(lg) {
     .drawer {
         z-index: inherit;
